<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/stringActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helloWorldTextView"
        android:text="@string/helloWorldText"
        android:textSize="42sp"
        android:textStyle="bold"
        android:background="#ffc7e3"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondTextview"
        android:text="@string/secondText"
        android:textSize="36sp"
        android:textStyle="italic"
        android:background="#B85CFF"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/helloWorldTextView"
        android:layout_centerHorizontal="true">
    </TextView>


    <Button
        android:id="@+id/learnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondTextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/startText"
        android:textSize="18sp"></Button>
</RelativeLayout>